Phase 2C: Managed disputes (#7)
